@@ -4,6 +4,7 @@
 * Feature: New option for show only favorite brands in the dropdown widget and the list widget
 * Feature: New option for configure the max number of brands in filter by brand widget
 * Feature: New option for randomize brand logos in the list widget
+* Feature: Hide empty brands in brand carousel
 * Enhancement: Hide widgets when there are no results to show
 * Fix: "Dokan Multivendor Marketplace" JavaScript conflict in admin
 = 1.6.4 =
